// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang 1`] = `"["_bundle/829.js","_bundle/998.js","_bundle/app.css","_bundle/app.js","_bundle/app.rtl.css","_bundle/extensions_search_lib_worker_index_js.js","_bundle/react.js","_bundle/search.js","_bundle/vendor.css","_bundle/vendor.js","_bundle/vendor.rtl.css","_bundle/vendors-node_modules_lunr_lunr_js.js","index.html","page.html"]"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang 2`] = `
<!DOCTYPE html>
<html lang="he"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/vendor.rtl.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app.rtl.css"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":".","deepBase":0},"data":{"title":"Documentation","links":[{"title":"Documentation","href":"page.html"}]},"meta":{"metadata":[],"style":[],"script":[]}},"router":{"pathname":"index.html","depth":1},"lang":"he","langs":["he"],"search":{}};
    </script>
    <script type="application/javascript"
            src="_bundle/react.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/vendor.js"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang 3`] = `
<!DOCTYPE html>
<html lang="he"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/vendor.rtl.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app.rtl.css"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":".","deepBase":0},"meta":{"metadata":[],"style":[],"script":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>תיעוד
      </p>/n"},"router":{"pathname":"page.html","depth":1},"lang":"he","langs":["he"],"search":{}};
    </script>
    <script type="application/javascript"
            src="_bundle/react.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/vendor.js"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 1`] = `"["_bundle/829.js","_bundle/998.js","_bundle/app.css","_bundle/app.js","_bundle/app.rtl.css","_bundle/extensions_search_lib_worker_index_js.js","_bundle/react.js","_bundle/search.js","_bundle/vendor.css","_bundle/vendor.js","_bundle/vendor.rtl.css","_bundle/vendors-node_modules_lunr_lunr_js.js","ar/index.html","ar/page.html","en/index.html","en/page.html","index.html"]"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 2`] = `
<!DOCTYPE html>
<html lang="ar"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/vendor.rtl.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/app.rtl.css"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":"ar","deepBase":1},"data":{"title":"Documentation","links":[{"title":"Documentation","href":"page.html"}]},"meta":{"metadata":[],"style":[],"script":[]}},"router":{"pathname":"index.html","depth":1},"lang":"ar","langs":["ar","en"],"search":{}};
    </script>
    <script type="application/javascript"
            src="../_bundle/react.js"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/app.js"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/vendor.js"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 3`] = `
<!DOCTYPE html>
<html lang="ar"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/vendor.rtl.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/app.rtl.css"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":"ar","deepBase":1},"meta":{"metadata":[],"style":[],"script":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>توثيق
      </p>/n"},"router":{"pathname":"page.html","depth":1},"lang":"ar","langs":["ar","en"],"search":{}};
    </script>
    <script type="application/javascript"
            src="../_bundle/react.js"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/app.js"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/vendor.js"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 4`] = `
<!DOCTYPE html>
<html lang="en"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="title"
          content="Documentation"
    >
    <meta name="noIndex"
          content="true"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation | Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/vendor.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/app.css"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":"en","deepBase":1},"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":[],"script":[]},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":[],"script":[]}},"router":{"pathname":"index.html","depth":1},"lang":"en","langs":["ar","en"],"search":{}};
    </script>
    <script type="application/javascript"
            src="../_bundle/react.js"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/app.js"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/vendor.js"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 5`] = `
<!DOCTYPE html>
<html lang="en"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="yfm"
          content="builder"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/vendor.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/app.css"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":"en","deepBase":1},"meta":{"metadata":[{"name":"yfm","content":"builder"}],"style":[],"script":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>Lorem
      </p>/n"},"router":{"pathname":"page.html","depth":1},"lang":"en","langs":["ar","en"],"search":{}};
    </script>
    <script type="application/javascript"
            src="../_bundle/react.js"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/app.js"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/vendor.js"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 6`] = `
<!DOCTYPE html>
<html lang="ar"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="refresh"
          content="0; url=./ar/index.html"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Redirect
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/vendor.rtl.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app.rtl.css"
    >
    <script type="text/javascript">
      window.location.replace("./ar/index.html");
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    If you are not redirected automatically, follow this
    <a href="./ar/index.html">
      link to example
    </a>
    .
  </body>
</html>
`;
